@@ -330,6 +330,7 @@ tut_mode_tooltip_padding=\n\n
 tut_mode_subfactory=Left-click: Select\nRight-click: Edit\nControl-right-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up\nShift-alt-left-click: Move to the bottom\nControl-alt-left-click: Move to the top
 tut_mode_tl_product=Left-click: Add recipe\nRight-click: Edit\nControl-right-click: Delete\nShift-left-click: Move right\nControl-left-click: Move left
 tut_mode_tl_byproduct=Left-click: Add recipe
+tut_mode_production_toggle=Left-click: Toggle production\nAlt-left-click: Toggle all other production
 tut_mode_producing_recipe=Left-click: Open subfloor\nControl-right-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up\nShift-alt-left-click: Move to the bottom\nControl-alt-left-click: Move to the top
 tut_mode_consuming_recipe=Control-right-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up\nShift-alt-left-click: Move to the bottom\nControl-alt-left-click: Move to the top
 tut_mode_machine=Left-click: Change machine\nRight-click: Set limit\nShift-left-click: Upgrade\nControl-left-click: Downgrade\nAlt-left-click: Put into cursor\nAlt-right-click: Reset to default
@@ -342,7 +343,6 @@ tut_mode_byproduct_matrix=Left-click: Add recipe to the end\nShift-left-click: A
 tut_mode_ingredient=Left-click: Add recipe to the end\nRight-click: Specify amount\nShift-left-click: Add recipe right below
 tut_mode_ingredient_matrix=Left-click: Add recipe to the end\nShift-left-click: Add recipe right below
 tut_mode_fuel=Left-click: Add recipe to the end\nRight-click: Change fuel type\nShift-left-click: Add recipe right below
-tut_mode_production_toggle=Left-click: Enable/disable this production line\nAlt-click: Enable/disable evrything but this production line
 tut_mode_alt_action=\nAlt-click: __1__
 
 # Messages
